[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/art/boss.png" type="Texture" id=1]
[ext_resource path="res://src/characters/components/gravity/gravity.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/characters/entities/boss/boss.gd" type="Script" id=3]
[ext_resource path="res://src/characters/components/state_machine/state_machine.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/characters/components/boss_idle_state/boss_idle_state.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/characters/components/boss_jump_state/boss_jump_state.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/characters/components/boss_fragile_state/boss_fragile_state.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/characters/components/small_heart/small_heart.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/characters/components/boss_die_state/boss_die_state.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/characters/components/afk/afk.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 13.5 )

[sub_resource type="Animation" id=10]
resource_name = "Die"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fragile"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle 2"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 9, 13.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 9, 9.5 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 10 )
anims/Fall = SubResource( 6 )
anims/Fragile = SubResource( 7 )
anims/Idle = SubResource( 2 )
"anims/Idle 2" = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/RESET = SubResource( 3 )

[node name="Gravity" parent="." instance=ExtResource( 2 )]

[node name="StateMachine" parent="." instance=ExtResource( 4 )]
starting_state = NodePath("AFK")

[node name="BossIdleState" parent="StateMachine" instance=ExtResource( 5 )]

[node name="BossJumpState" parent="StateMachine" instance=ExtResource( 6 )]
fragile_state = NodePath("../BossFragileState")

[node name="BossFragileState" parent="StateMachine" instance=ExtResource( 7 )]
jump_state = NodePath("../BossJumpState")

[node name="BossDieState" parent="StateMachine" instance=ExtResource( 9 )]

[node name="AFK" parent="StateMachine" instance=ExtResource( 10 )]

[node name="Hearts" type="Position2D" parent="."]
visible = false
position = Vector2( 0, -13.5 )

[node name="SmallHeart" parent="Hearts" instance=ExtResource( 8 )]
position = Vector2( -3, -8.5 )
scale = Vector2( 0.5, 0.5 )

[node name="SmallHeart2" parent="Hearts" instance=ExtResource( 8 )]
position = Vector2( 5, -5.5 )
rotation = 0.785398
scale = Vector2( 0.5, 0.5 )

[node name="SmallHeart3" parent="Hearts" instance=ExtResource( 8 )]
position = Vector2( 8, 1.5 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -13.5 )
shape = SubResource( 8 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -9.5 )
shape = SubResource( 9 )
disabled = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurt"]
